feat: enhance country selection and SEO
- Improve country selection with searchable dropdown and flags
- Add country page generation script for SEO
- Enhance CountryPage component with better layout and content
- Update Filters component with better UX

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server": "tsx server.ts",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "download-descriptions": "tsx scripts/download-descriptions.ts",
-    "update-urls": "tsx scripts/update-description-urls.ts"
+    "update-urls": "tsx scripts/update-description-urls.ts",
+    "generate-country-pages": "tsx scripts/generateCountryPages.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
